Update example gitconf

--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -14,6 +14,13 @@
         wtf     = !$ZSH/bin/git-wtf
         rank-contributors = !$ZSH/bin/git-rank-contributors
         count   = !git shortlog -sn
+        # I don't even know what half of this does, but it's pretty.
+        # Shamelessly stolen from http://fredkschott.com/post/2014/02/git-log-is-so-2005/
+        lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
+        d = difftool
+        st = status
+        com = commit
+        co = checkout
 [color]
         diff = auto
         status = auto
