--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -17,6 +17,7 @@
         st = status
         com = commit
         co = checkout
+        dc = diff --cached
 [color]
         diff = auto
         status = auto
