--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ git/gitconfig.symlink
 # - projectile project dir
 emacs/emacs.d.symlink/elpa
 emacs/emacs.d.symlink/projectile-bookmarks.eld
+emacs/emacs.d.symlink/projectile.cache
