--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ emacs/emacs.d.symlink/elpa
 emacs/emacs.d.symlink/projectile-bookmarks.eld
 emacs/emacs.d.symlink/projectile.cache
 emacs/emacs.d.symlink/eshell/history
+emacs/emacs.d.symlink/eshell/lastdir
