--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ emacs/emacs.d.symlink/projectile-bookmarks.eld
 emacs/emacs.d.symlink/projectile.cache
 emacs/emacs.d.symlink/eshell/history
 emacs/emacs.d.symlink/eshell/lastdir
+vim/vim.symlink/pack
