--- a/vim/vim.symlink/coc-settings.json
+++ b/vim/vim.symlink/coc-settings.json
@@ -1,10 +1,3 @@
 {
-  "suggest.autoTrigger": "none",
-  "languageserver": {
-    "metals": {
-      "command": "metals-vim",
-      "rootPatterns": ["build.sbt"],
-      "filetypes": ["scala", "sbt"]
-    }
-  }
+  "suggest.autoTrigger": "none"
 }
